--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.18.1
+Date: 13. 2. 2020
+  Bugfixes:
+    - Fixed minigun firing while not being in range
+
+---------------------------------------------------------------------------------------------------
 Version: 0.18.0
 Date: 2. 2. 2020
   Improvements:
