--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.18.6
+Date: 11. 4. 2020
+  Bugfixes:
+    - Fixed Napalm icon
+    - Fixed large storage tank filling guage
+
+---------------------------------------------------------------------------------------------------
 Version: 0.18.5
 Date: 28. 3. 2020
   Improvements:
