--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.18.8
+Date: 12. 4. 2020
+  Improvements:
+    - Added color tint to building item icons
+  Bugfixes:
+    - Fixed storage tank potentially getting next_upgrade
+    - Fixed rocket launcher MKII icon
+
+---------------------------------------------------------------------------------------------------
 Version: 0.18.7
 Date: 11. 4. 2020
   Bugfixes:
