--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.3
+Date: 07. 02. 2021
+  Bugfixes:
+    - Added increased healing capsule to 300 health recovery
+
+---------------------------------------------------------------------------------------------------
 Version: 1.0.2
 Date: 07. 12. 2020
   Bugfixes:
