--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.4
+Date: 28. 02. 2021
+  Bugfixes:
+    - Fixed air filter entity description
+    - Fixed speed capsule effect description
+
+---------------------------------------------------------------------------------------------------
 Version: 1.0.3
 Date: 07. 02. 2021
   Bugfixes:
