--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.5
+Date: 28. 03. 2021
+  Bugfixes:
+    - Fixed nuclear generator not working in spidertron
+
+---------------------------------------------------------------------------------------------------
 Version: 1.0.4
 Date: 28. 02. 2021
   Bugfixes:
