--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.7
+Date: 16. 04. 2021
+  Contributions:
+    - Astorin has provided an updated RU locale
+
+---------------------------------------------------------------------------------------------------
 Version: 1.0.6
 Date: 10. 04. 2021
   Improvements:
