--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.8
+Date: 17. 04. 2021
+  Contributions:
+    - MakaronP has provided an bugfix for the updated RU locale
+
+---------------------------------------------------------------------------------------------------
 Version: 1.0.7
 Date: 16. 04. 2021
   Contributions:
