--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.0
+Date: 05. 09. 2021
+  Tweaks:
+    - Reduced mortar cooldown by %50
+
+---------------------------------------------------------------------------------------------------
 Version: 1.0.9
 Date: 24. 04. 2021
   Integrations:
