fixed chinese locale

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.2
+Date: 28. 12. 2021
+  Bugfixes:
+    - Corrected chinese locale duplicate key artillery remote
+
+---------------------------------------------------------------------------------------------------
 Version: 1.1.1
 Date: 05. 09. 2021
   Contributions:
