--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.3
+Date: 16. 01. 2022
+  Bugfixes:
+    - Fixed infinite technologies requiring 1 science pack for first level of infinite tech
+
+---------------------------------------------------------------------------------------------------
 Version: 1.1.2
 Date: 28. 12. 2021
   Bugfixes:
