--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@ Version: 1.1.7
     - Increased research costs of new turrets by ~2x
     - Increased research costs of new vehicles by ~2x to ~4x
     - Increased power armor mk3 build time to 90 seconds and ~2x steel, processing chip cost, and added electric engines
+    - Reduced gun turret MKII damage bonus by 60%
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.6
